change to credit-card box where text was not aligned correctly

--- a/stylesheets/layout.css.scss
+++ b/stylesheets/layout.css.scss
@@ -26,6 +26,10 @@ body {
   margin-left: 1em;
 }
 
+.credit-card {
+  padding-left: 1em !important;
+}
+
 .full {
   @include grid-column(12);
 
